--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
+  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
 
 <body>
   <div id="app"></div>
-  <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fecdef1690bdad18277940738f200aa4&libraries=clusterer"></script>
-  <script type="module" src="@/assets/js/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
+  
+  <!--
   <script type="module" src="@/assets/js/nav.js"></script>
   <script type="module" src="@/assets/js/map.js"></script>
   <script type="module" src="@/assets/js/header.js"></script>
   <script type="module" src="@/assets/js/auth.js"></script>
   <script type="module" src="@/assets/js/planRegist.js"></script> -->
-  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </body>
 
 </html>
