--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7ab181e36eff60d0fec7f242196fe188&libraries=clusterer"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
-  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-</head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
 
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-  
-  <!--
+    <!--
   <script type="module" src="@/assets/js/nav.js"></script>
   <script type="module" src="@/assets/js/map.js"></script>
   <script type="module" src="@/assets/js/header.js"></script>
   <script type="module" src="@/assets/js/auth.js"></script>
   <script type="module" src="@/assets/js/planRegist.js"></script> -->
-</body>
-
+  </body>
 </html>
