--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/travel-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enjoy Trip</title>
+    <title>LoginAdventure</title>
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script
       type="text/javascript"
